fixed alignment issue with grid system

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,6 @@ body  {
 .grid-container {
 
   width: 100%;
-  max-width: 100%;
 }
 
 /*set width and height properties (and min/max properties) to include content, padding and border*/
@@ -263,47 +262,11 @@ body  {
   .col-m-12 {
     width: 100%;
   }
-  /*offset*/
-  .offset-1 {
-    margin-left: 8.33%;
-  }
-  .offset-2 {
-    margin-left: 16.66%;
-  }
-  .offset-3 {
-    margin-left: 25%;
-  }
-  .offset-4 {
-    margin-left: 33.33%;
-  }
-  .offset-5 {
-    margin-left: 41.66%;
-  }
-  .offset-6 {
-    margin-left: 50%;
-  }
-  .offset-7 {
-    margin-left: 58.33%;
-  }
-  .offset-8 {
-    margin-left: 66.66%;
-  }
-  .offset-9 {
-    margin-left: 75%;
-  }
-  .offset-10 {
-    margin-left: 83.33%;
-  }
-  .offset-11 {
-    margin-left: 91.66%;
-  }
+
 }
 @media only screen and (min-width: 768px) {
   /* For desktop: */
-  .grid-container {
-    width: 100%;
-    max-width: 1000px;
-  }
+
   .col-1 {
     width: 8.33%;
   }
@@ -339,6 +302,40 @@ body  {
   }
   .col-12 {
     width: 100%;
+  }
+  /*offset*/
+  .offset-1 {
+    margin-left: 8.33%;
+  }
+  .offset-2 {
+    margin-left: 16.66%;
+  }
+  .offset-3 {
+    margin-left: 25%;
+  }
+  .offset-4 {
+    margin-left: 33.33%;
+  }
+  .offset-5 {
+    margin-left: 41.66%;
+  }
+  .offset-6 {
+    margin-left: 50%;
+  }
+  .offset-7 {
+    margin-left: 58.33%;
+  }
+  .offset-8 {
+    margin-left: 66.66%;
+  }
+  .offset-9 {
+    margin-left: 75%;
+  }
+  .offset-10 {
+    margin-left: 83.33%;
+  }
+  .offset-11 {
+    margin-left: 91.66%;
   }
 }
 .background-image {
@@ -401,4 +398,8 @@ body  {
   color: white;
   position: relative;
   z-index: 1;
+}
+.dropdown {
+  position: relative;
+  top: 498px;
 }
